--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,10 @@ FROM oven/bun:latest
 WORKDIR /app
 
 COPY package.json bun.lock* ./
+COPY prisma ./prisma
+
 RUN bun install
+RUN bunx prisma generate
 
 COPY . .
 
