--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,15 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
+    "elysia": "latest",
+    "pg": "^8.17.2",
+    "prismabox": "^1.1.26"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "^1.3.7",
+    "prisma": "^7.3.0"
   },
   "module": "src/index.js"
 }
