--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   db:
     image: postgres:15-alpine
     container_name: durian_db
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
@@ -28,7 +30,8 @@ services:
     ports:
       - "8080:8080"
     environment:
-      DATABASE_URL: postgres://user:password@db:5432/durian_db
+      # DATABASE_URL: postgres://user:password@db:5432/durian_db
+      DATABASE_URL: postgresql://neondb_owner:npg_V3v2OzYQmtls@ep-curly-paper-a1vss3x5-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
       RADIUS_SERVER: radius
       RADIUS_SECRET: testing123
     depends_on:
