--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,13 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/jwt": "^1.4.0",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "elysia": "latest",
     "pg": "^8.17.2",
-    "prismabox": "^1.1.26"
+    "prismabox": "^1.1.26",
+    "radius": "^1.1.4"
   },
   "devDependencies": {
     "bun-types": "^1.3.7",
