--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,10 +36,10 @@ services:
     ports:
       - "8080:8080"
     environment:
-      # DATABASE_URL: postgres://user:password@db:5432/durian_db
-      DATABASE_URL: postgresql://neondb_owner:npg_V3v2OzYQmtls@ep-curly-paper-a1vss3x5-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
-      RADIUS_SERVER: radius
-      RADIUS_SECRET: testing123
+      DATABASE_URL: ${DATABASE_URL:-postgres://user:password@db:5432/durian_db}
+      JWT_SECRET: ${JWT_SECRET}
+      RADIUS_SERVER: ${RADIUS_SERVER:-radius}
+      RADIUS_SECRET: ${RADIUS_SECRET}
     depends_on:
       - db
       - radius
