--- a/radius/raddb/clients.conf
+++ b/radius/raddb/clients.conf
@@ -1,5 +1,5 @@
 client nextjs_app {
     ipaddr   = 0.0.0.0/0       # For testing, allow any IP; in production, use your server IP
-    secret   = testing123      # This is your shared secret for Next.js
+    secret   = td63bc0803eb3b054a4d9c4d3836bf2bc     # This is your shared secret for Next.js
     nas_type = other
 }
