--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,5 +55,21 @@ services:
     depends_on:
       - backend
 
+  # Nginx Reverse Proxy
+  nginx:
+    build: ./nginx
+    container_name: durian_nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
+    depends_on:
+      - frontend
+      - backend
+    restart: unless-stopped
+
 volumes:
   postgres_data:
